--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "lint:eslint": "eslint --fix --ext \"src/**/*.{vue,less,css,scss}\"",
+    "lint:eslint": "eslint --fix --ext \"src/**/*.{vue,tsx}\"",
     "lint:prettier": "prettier --write --loglevel warn \"src/**/*.{js,json,tsx,css,less,scss,vue,html,md}\"",
     "lint:stylelint": "stylelint --fix \"src/**/*.{vue,less,postcss,css,scss}\" --cache --cache-location node_modules/.cache/stylelint/",
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s"
   },
   "lint-staged": {
-    "src/**/*.{vue,less,css,scss}": [
+    "src/**/*.{vue, tsx}": [
       "npm run lint:eslint"
     ],
     "src/**/*.{js,json,tsx,css,less,scss,vue,html,md}": [
@@ -27,6 +27,7 @@
   "devDependencies": {
     "@commitlint/cli": "^11.0.0",
     "@commitlint/config-conventional": "^11.0.0",
+    "@typescript-eslint/eslint-plugin": "^4.11.0",
     "@typescript-eslint/parser": "^4.11.0",
     "@vue/compiler-sfc": "^3.0.4",
     "conventional-changelog-cli": "^2.1.1",
@@ -37,6 +38,7 @@
     "husky": "^4.3.6",
     "lint-staged": "^10.5.3",
     "prettier": "^2.2.1",
+    "sass": "^1.30.0",
     "stylelint": "^13.8.0",
     "stylelint-config-prettier": "^8.0.2",
     "stylelint-config-standard": "^20.0.0",
