--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
   "dependencies": {
     "ant-design-vue": "^2.0.0-rc.5",
     "typescript": "^4.1.3",
-    "vue": "^3.0.4"
+    "vue": "^3.0.4",
+    "vue-router": "^4.0.1"
   },
   "devDependencies": {
     "@commitlint/cli": "^11.0.0",
