--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "ant-design-vue": "^2.0.0-rc.5",
     "typescript": "^4.1.3",
     "vue": "^3.0.4",
-    "vue-router": "^4.0.1"
+    "vue-router": "^4.0.1",
+    "vuex": "^4.0.0-rc.2"
   },
   "devDependencies": {
     "@commitlint/cli": "^11.0.0",
